--- a/ProjectYSB/ProjectYSB/Saved/Config/WindowsEditor/Engine.ini
+++ b/ProjectYSB/ProjectYSB/Saved/Config/WindowsEditor/Engine.ini
@@ -45,6 +45,8 @@ Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/MovieScene/SequencerScripting/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
+Paths=../../../Engine/Plugins/Experimental/UVEditor/Content
+Paths=../../../Engine/Plugins/Editor/GLTFImporter/Content
 
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=False
@@ -75,4 +77,8 @@ TunnelMulticastEndpoint=
 SDKPath=(Path="")
 NDKPath=(Path="")
 JavaPath=(Path="")
+
+[/Script/UnrealEd.UnrealEdEngine]
+TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld.OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
+TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/Basic.Basic",Map="/Engine/Maps/Templates/Template_Default",DisplayName="Basic",Category="")
 
