--- a/Test/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Test/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,12 +98,28 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/Levels/Level_1
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
+CubeGridToolActions="\"Object\" "
+InteractiveToolPropertySet="\"Object\" "
+CubeGridToolProperties="\"Object\" "
+CreateMeshObjectTypeProperties="\"Object\" "
+NewMeshMaterialProperties="\"Object\" "
+StaticMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+PreviewMaterial="\"Object\" "
+Material="\"Object\" "
+MaterialInterface="\"Object\" "
+MaterialExpressionConstant3Vector="\"Object\" "
+MaterialExpression="\"Object\" "
+MaterialExpressionConstant="\"Object\" "
 
 [DetailCategories]
 WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
@@ -122,7 +138,294 @@ WorldSettings.Rendering=True
 WorldSettings.Audio=True
 WorldSettings.Tick=True
 WorldSettings.Networking=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.PathTracing=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.Actor=True
+CubeGridToolActions.Actions=True
+CubeGridToolActions.GridReinitialization=True
+CubeGridToolProperties.Options=True
+CubeGridToolProperties.BlockSelection=True
+CubeGridToolProperties.ShortcutInfo=True
+CreateMeshObjectTypeProperties.OutputType=True
+NewMeshMaterialProperties.Material=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Nanite=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.WorldPositionOffset=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+
+[MRU]
+MRUItem0=/Game/Levels/Level_1
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[ContentBrowser]
+ContentBrowserTab1.SelectedPaths=/Game/Prefabs
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Game/Materials
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+FavoritePaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.FavoritesAreaExpanded=False
+ContentBrowserTab1.PathAreaExpanded=True
+ContentBrowserTab1.CollectionAreaExpanded=False
+ContentBrowserTab1.FavoritesSearchAreaExpanded=False
+ContentBrowserTab1.PathSearchAreaExpanded=False
+ContentBrowserTab1.CollectionSearchAreaExpanded=False
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab1.PluginFilters=
+ContentBrowserTab1.Favorites.SelectedPaths=
+ContentBrowserTab1.SelectedCollections=
+ContentBrowserTab1.ExpandedCollections=
+ContentBrowserTab1.ThumbnailSize=2
+ContentBrowserTab1.CurrentViewType=1
+
+[/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
+bHideEditorDataLayers=False
+bHideRuntimeDataLayers=False
+bHideDataLayerActors=True
+bHideUnloadedActors=False
+bShowOnlySelectedActors=False
+bHighlightSelectedDataLayers=True
+bHideLevelInstanceContent=True
+bDisableLoadingOfLastLoadedRegions=False
+bBugItGoLoadRegion=False
+bShowCellCoords=False
+PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
+
+[PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Materials/Art
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=0
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=1
+bPlatformUsed[50]=0
+bPlatformUsed[51]=0
+bPlatformUsed[52]=0
+bPlatformUsed[53]=0
+bPlatformUsed[54]=0
+bPlatformUsed[55]=0
+bPlatformUsed[56]=0
+bPlatformUsed[57]=0
+bPlatformUsed[58]=0
+bPlatformUsed[59]=0
+bPlatformUsed[60]=0
+bPlatformUsed[61]=0
+bPlatformUsed[62]=0
+bPlatformUsed[63]=0
+bPlatformUsed[64]=0
+bPlatformUsed[65]=0
+bPlatformUsed[66]=0
+bPlatformUsed[67]=0
+bPlatformUsed[68]=0
+bPlatformUsed[69]=0
+bPlatformUsed[70]=0
+bPlatformUsed[71]=0
+bPlatformUsed[72]=0
+bPlatformUsed[73]=0
+bPlatformUsed[74]=0
+bPlatformUsed[75]=0
+bPlatformUsed[76]=0
+bPlatformUsed[77]=0
+bPlatformUsed[78]=0
+bPlatformUsed[79]=0
+bPlatformUsed[80]=0
+bPlatformUsed[81]=0
+bPlatformUsed[82]=0
+bPlatformUsed[83]=0
+bPlatformUsed[84]=0
+bPlatformUsed[85]=0
+bPlatformUsed[86]=0
+bPlatformUsed[87]=0
+bPlatformUsed[88]=0
+bPlatformUsed[89]=0
+bPlatformUsed[90]=0
+bPlatformUsed[91]=0
+bPlatformUsed[92]=0
+bPlatformUsed[93]=0
+bPlatformUsed[94]=0
+bPlatformUsed[95]=0
+bPlatformUsed[96]=0
+bPlatformUsed[97]=0
+bPlatformUsed[98]=0
+bPlatformUsed[99]=0
+bPlatformUsed[100]=0
+bPlatformUsed[101]=0
+bPlatformUsed[102]=0
+bPlatformUsed[103]=0
+bPlatformUsed[104]=0
+bPlatformUsed[105]=0
+bPlatformUsed[106]=0
+bPlatformUsed[107]=0
+bPlatformUsed[108]=0
+bPlatformUsed[109]=0
+bPlatformUsed[110]=0
+bPlatformUsed[111]=0
+bPlatformUsed[112]=0
+bPlatformUsed[113]=0
+bPlatformUsed[114]=0
+bPlatformUsed[115]=0
+bPlatformUsed[116]=0
+bPlatformUsed[117]=0
+bPlatformUsed[118]=0
+bPlatformUsed[119]=0
+bPlatformUsed[120]=0
+bPlatformUsed[121]=0
+bPlatformUsed[122]=0
+bPlatformUsed[123]=0
+bPlatformUsed[124]=0
+bPlatformUsed[125]=0
+bPlatformUsed[126]=0
+bPlatformUsed[127]=0
+bPlatformUsed[128]=0
+bPlatformUsed[129]=0
+bPlatformUsed[130]=0
+bPlatformUsed[131]=0
+bPlatformUsed[132]=0
+bPlatformUsed[133]=0
+bPlatformUsed[134]=0
+bPlatformUsed[135]=0
+bPlatformUsed[136]=0
+bPlatformUsed[137]=0
+bPlatformUsed[138]=0
+bPlatformUsed[139]=0
+bPlatformUsed[140]=0
+bPlatformUsed[141]=0
+bPlatformUsed[142]=0
+bPlatformUsed[143]=0
+bPlatformUsed[144]=0
+bPlatformUsed[145]=0
+bPlatformUsed[146]=0
+bPlatformUsed[147]=0
+bPlatformUsed[148]=0
+bPlatformUsed[149]=0
+bPlatformUsed[150]=0
+bPlatformUsed[151]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
